ENTRYSTORE-689 #resolve Taking redirect locations from config instead of URL